# snapmail-rsm

./: .gitignore  Cargo.toml  README.md  dna_hash.txt  happ.yaml  holochain_rev.txt  pack-happ.sh  zome_hash.txt
api/: Cargo.toml
api/src/: api_error.rs  lib.rs
api_test/: Cargo.toml
bindings/: snapmail.bindings.ts
crates/dna_wasm/: Cargo.toml
crates/dna_wasm/src/: lib.rs
crates/proc_macro/: Cargo.toml
crates/proc_macro/src/: lib.rs
crates/wasm_utils/: Cargo.toml
crates/wasm_utils/src/: main.rs
derive/: Cargo.toml
derive/src/: lib.rs
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs
scripts/: pack-happ.bat  pack-happ.sh  publish_draft.bat  save-dna-hash.bat  save-dna-hash.sh  save_dna_hash.sh  set_holochain_rev.sh  ts-bindings.sh  write-zome-hash.sh
snapmail.dna.workdir/: dna.json  dna.yaml  happ.yaml
spec/: model.md  readme.md
sweettest/: Cargo.toml
sweettest/src/: main.rs  setup.rs  test.rs  test_mail.rs
test/: config.ts  package.json  test.ts  tsconfig.json  utils.js  utils.ts
test/suites/: chunk.ts  file_send.ts  file_send_pending.ts  handle.ts  mail.ts  playground.ts  stress.ts  stress_multi.ts  stress_multi_pending.js
wasm_utils/: Cargo.toml
wasm_utils/src/: main.rs  wasm.rs
workdir/: dna.yaml  happ.yaml
zomes/snapmail/: Cargo.toml
zomes/snapmail/src/: api_error.rs  chunk.rs  const.rs  constants.rs  create_enc_key.rs  create_entry.rs  dm.rs  dm_protocol.rs  entry_kind.rs  get_enc_key.rs  lib.rs  link_kind.rs  path_kind.rs  playground.rs  protocol.rs  pub_enc_key.rs  signal_protocol.rs  utils.rs  validate.rs  validate_create_link.rs  validate_delete_link.rs  validate_entry.rs  validate_link.rs
zomes/snapmail/src/callbacks/: init.rs  mod.rs  post_commit.rs  validate.rs  validate_agent.rs  validate_entry.rs  validate_link.rs  validate_package.rs
zomes/snapmail/src/file/: dm.rs  mod.rs
zomes/snapmail/src/file/entries/: chunk.rs  manifest.rs  mod.rs
zomes/snapmail/src/file/functions/: find_manifest.rs  get_all_manifests.rs  get_chunk.rs  get_manifest.rs  get_missing_attachments.rs  get_missing_chunks.rs  mod.rs  write_chunk.rs  write_manifest.rs
zomes/snapmail/src/handle/: mod.rs  utils.rs  validation.rs
zomes/snapmail/src/handle/functions/: find_agent.rs  get_all_handles.rs  get_handle.rs  get_my_handle.rs  get_my_handle_history.rs  mod.rs  ping_agent.rs  set_handle.rs
zomes/snapmail/src/mail/: mod.rs  pendingmail_ext.rs  receive.rs  utils.rs
zomes/snapmail/src/mail/entries/: delivery_confirmation.rs  inack.rs  inmail.rs  mod.rs  outack.rs  outmail.rs  pending_ack.rs  pending_mail.rs
zomes/snapmail/src/mail/functions/: acknowledge_mail.rs  check_ack_inbox.rs  check_incoming_ack.rs  check_incoming_mail.rs  check_mail_inbox.rs  delete_mail.rs  get_all_arrived_mail.rs  get_all_mails.rs  get_all_unacknowledged_inmails.rs  get_mail.rs  get_outack.rs  get_outmail_state.rs  has_ack_been_delivered.rs  has_ack_been_received.rs  has_mail_been_fully_acknowleged.rs  has_mail_been_received.rs  is_outack_sent.rs  mod.rs  request_acks.rs  resend_outacks.rs  resend_outmails.rs  send_mail.rs
zomes/snapmail_model/: Cargo.toml
zomes/snapmail_model/src/: constants.rs  handle.rs  handle_validation.rs  lib.rs  link_kind.rs  pub_enc_key.rs
zomes/snapmail_model/src/file/: chunk.rs  manifest.rs
zomes/snapmail_model/src/mail/: delivery_confirmation.rs  inack.rs  inmail.rs  mod.rs  outack.rs  outmail.rs  pending_ack.rs  pending_mail.rs
