[workspace]
resolver = "2"
members = [
  "zomes/snapmail_model",
  "zomes/snapmail",
  #"sweettest",
  "crates/proc_macro",
]

[workspace.package]
version = "0.2.0-hdk-beta.1.0"
rust-version = "1.65.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", default-features = false }
hdi = { version = "0.2.0", default-features = false }
hdk = { version = "0.1.0", default-features = false }
zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "beta.1.0" }
holochain = { version = "0.1.0" }
holochain_conductor_api = { version = "0.1.0", default-features = false }
holochain_util = { version = "0.1.0", default-features = false }
holochain_serialized_bytes = "=0.0.51"

[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

#[profile.release.package.snapmail_sweettest]
#opt-level = 0
#overflow-checks = false

[profile.release]
opt-level = "z"
lto = true # link time optimization

[profile.release.build-override]
opt-level = "z"
