[workspace]
resolver = "2"
members = [
  "zomes/snapmail_model",
  "zomes/snapmail",
  #"sweettest",
  "crates/proc_macro",
]

[workspace.package]
version = "0.2.4"
rust-version = "1.70.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "=1.0.163", default-features = false }
hdi = { version = "0.3.4", default-features = false }
hdk = { version = "0.2.4", default-features = false }
zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-2.4" }

holochain = { version = "0.2.4" }
holochain_conductor_api = { version = "0.2.4", default-features = false }
holochain_util = { version = "0.2.4", default-features = false }
holochain_serialized_bytes = "=0.0.51"

[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

#[profile.release.package.snapmail_sweettest]
#opt-level = 0
#overflow-checks = false

[profile.release]
opt-level = "z"
lto = true # link time optimization

[profile.release.build-override]
opt-level = "z"
