[workspace]
resolver = "2"
members = [
  "zomes/snapmail_model",
  "zomes/snapmail",
  #"sweettest",
  "crates/proc_macro",
]

[workspace.package]
version = "0.3.0"
rust-version = "1.74.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "=1.0.197", default-features = false }
hdi = { version = "=0.4.0-beta-dev.30", default-features = false }
hdk = { version = "=0.3.0-beta-dev.34", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-3.0" }

holochain = { version = "=0.3.0-beta-dev.40" }
holochain_conductor_api = { version = "^0.3.0-beta-dev.39", default-features = false }
holochain_util = { version = "^0.3.0-beta-dev.5", default-features = false }
holochain_serialized_bytes = "=0.0.53"

[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

#[profile.release.package.snapmail_sweettest]
#opt-level = 0
#overflow-checks = false

[profile.release]
opt-level = "z"
lto = true # link time optimization

[profile.release.build-override]
opt-level = "z"
