[package]
name = "snapmail_api"
version = "0.0.1"
edition = "2018"

[lib]
name = "snapmail_api"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
rkv = "0.10.4"
shrinkwraprs = "0.3.0"
chrono = "=0.4.6"
serde = "1.0"
strum = "0.19"
strum_macros = "0.19"
derive_more = "0.99.9"
tokio = { version = "1.3", features = [ "full" ] }
thiserror = "1.0.24"
lazy_static = "1.4.0"
holochain_serialized_bytes = "=0.0.50"

#snapmail = { path = "../zomes/snapmail" }

holo_hash = { git = "https://github.com/holochain/holochain.git", rev = "7f7c926d8eaf57f007848880eea56bf296410096", package = "holo_hash" }
#tokio_helper = { git = "https://github.com/holochain/holochain.git", rev = "7f7c926d8eaf57f007848880eea56bf296410096", package = "tokio_helper" }
holochain = { git = "https://github.com/holochain/holochain.git", rev = "7f7c926d8eaf57f007848880eea56bf296410096", package = "holochain" }
holochain_zome_types = { git = "https://github.com/holochain/holochain.git", rev = "7f7c926d8eaf57f007848880eea56bf296410096", package = "holochain_zome_types" }
holochain_conductor_api = { git = "https://github.com/holochain/holochain.git", rev = "7f7c926d8eaf57f007848880eea56bf296410096", package = "holochain_conductor_api" }
holochain_types = { git = "https://github.com/holochain/holochain.git", rev = "7f7c926d8eaf57f007848880eea56bf296410096", package = "holochain_types" }
