[package]
name = "snapmail_sweettest"
version = "0.0.1"
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
shrinkwraprs = { version = "0.3.0", default-features = false }
chrono = { version = "=0.4.19", default-features = false }
serde = { version = "1.0", default-features = false }
strum = { version = "0.19", default-features = false }
strum_macros = { version = "0.19", default-features = false }
derive_more = { version = "=0.99.16", default-features = false }
serde_json = { version = "1.0.51", features = [ "preserve_order" ] }
colored = "2.0.0"
futures = { version = "0.3.1", default-features = false }
tokio = { version = "1.3", features = [ "full" ] }
tokio-stream = { version = "0.1", default-features = false }
maplit = { version = "1", default-features = false }

holochain = { version = "0.0.150", default-features = false, features = ["test_utils"]  }
holo_hash = { version = "0.0.30", default-features = false, features = ["encoding"] }
holochain_zome_types = { version = "0.0.41", default-features = false  }

kitsune_p2p = { version = "0.0.39", default-features = false  }
holochain_state = { version = "0.0.50", default-features = false  }
holochain_p2p = { version = "0.0.48", default-features = false  }

sweettest_utils = { git = "https://github.com/ddd-mtl/sweettest-utils", branch = "142" }

snapmail = { path = "../zomes/snapmail", default-features = false }
