[package]
name = "snapmail_sweettest"
version = "0.0.1"
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
shrinkwraprs = { version = "0.3.0", default-features = false }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
serde = { version = "1.0", default-features = false }
strum = { version = "0.19", default-features = false }
strum_macros = { version = "0.19", default-features = false }
derive_more = { version = "=0.99.16", default-features = false }
serde_json = { version = "1.0.51", features = [ "preserve_order" ] }
colored = "2.0.0"
futures = { version = "0.3.1", default-features = false }
tokio = { version = "1.3", features = [ "full" ] }
tokio-stream = { version = "0.1", default-features = false }
maplit = { version = "1", default-features = false }

holochain = { version = "0.0.165", default-features = false, features = ["test_utils"]  }
holochain_zome_types = { version = "0.0.50", default-features = false  }
kitsune_p2p = { version = "0.0.48", default-features = false  }
holochain_state = { version = "0.0.62", default-features = false  }
holochain_p2p = { version = "0.0.59", default-features = false  }
holo_hash = { version = "0.0.33", default-features = false  }

sweettest_utils = { git = "https://github.com/ddd-mtl/sweettest-utils", branch = "holochain-0.0.165" }

snapmail = { path = "../zomes/snapmail", default-features = false }
snapmail_model = { path = "../zomes/snapmail_model", default-features = false }
