[package]
name = "wasm_utils"
version = "0.0.1"
keywords = [ "holochain" ]
categories = [ "command-line-utilities"]
edition = "2018"

[[bin]]
name = "hash_wasm"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0"
base64 = "0.13"
tokio = { version = "1.5", features = [ "full" ] }
# 385 deps wtf
holochain_types = { git = "https://github.com/holochain/holochain.git", rev = "c5dbdf28825927106bc32d186dd54f20d35df468", package = "holochain_types" }
# 550 deps wtf
#holochain_types = { path = "../../holochain-develop/crates/holochain_types" }
