[package]
name = "wasm_utils"
version = "0.0.1"
keywords = [ "holochain" ]
categories = [ "command-line-utilities"]
edition = "2018"

[[bin]]
name = "hash_wasm"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0"
base64 = "0.13"
tokio = { version = "1.8.1", features = [ "full" ] }
serde = { version = "1.0", features = [ "derive", "rc" ] }

holochain_serialized_bytes = "=0.0.51"
holo_hash = { git = "https://github.com/holochain/holochain.git", rev = "c5dbdf28825927106bc32d186dd54f20d35df468", package = "holo_hash", features =["hashing"]}
