[package]
name = "dna_wasm"
version = "0.0.1"
keywords = [ "holochain" ]
edition = "2018"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { version = "1.0", features = [ "derive", "rc" ] }

holochain_serialized_bytes = "=0.0.51"
holo_hash = { git = "https://github.com/holochain/holochain.git", rev = "296a08dc25e799c6fb3da3eecafc457179d9bd59", package = "holo_hash", features =["encoding", "hashing"]}
