[package]
name = "dna_wasm"
version = "0.0.1"
keywords = [ "holochain" ]
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { version = "1.0", features = [ "derive", "rc" ] }

holochain_serialized_bytes = "=0.0.51"
holo_hash = { version = "0.0.19", features =["encoding", "hashing"]}
