[package]
name = "wasm_utils"
version = "0.0.1"
keywords = [ "holochain" ]
categories = [ "command-line-utilities"]
edition = "2021"

[[bin]]
name = "hash_wasm"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0"
base64 = "0.13"
tokio = { version = "1.8.1", features = [ "full" ] }
#serde = { version = "1.0", features = [ "derive", "rc" ] }
dna_wasm = {path = "../dna_wasm" }