[package]
name = "snapmail"
version = "0.2.147"
edition = "2021"

# Ensure that this is not inside of any other workspace.
# This crate should be an implementation detail of test_utils_wasm and
# therefore shouldn't be mentioned in the top-level Cargo.toml
#[workspace]

[lib]
name = "snapmail"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
shrinkwraprs = "=0.3.0"
serde = { version = "1.0", default-features = false }
strum = "=0.19"
strum_macros = "=0.19"
derive_more = "=0.99.16"
bincode = "=1.3.3"
base64 = {version = "0.13"}

hdk = { version = "0.0.147", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "147" }

snapmail_proc_macro = {path = "../../crates/proc_macro", default-features = false }
snapmail_model = { path = "../snapmail_model" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
thiserror = "1.0.24"
holochain_serialized_bytes = "=0.0.51"
holochain = { version = "0.0.156", default-features = false }
holochain_util = { version = "0.0.11", default-features = false }
holochain_conductor_api = { version = "0.0.54", default-features = false }

