[package]
name = "snapmail"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
name = "snapmail"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
shrinkwraprs = "=0.3.0"
strum = "=0.19"
strum_macros = "=0.19"
derive_more = "=0.99.17"
bincode = "=1.3.3"
base64 = {version = "0.13"}

serde.workspace = true
hdk.workspace = true
zome_utils.workspace = true


snapmail_proc_macro = {path = "../../crates/proc_macro", default-features = false }
snapmail_model = { path = "../snapmail_model" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
thiserror = "1.0.24"
holochain_serialized_bytes.workspace = true
holochain.workspace = true
holochain_util.workspace = true
holochain_conductor_api.workspace = true