[package]
name = "snapmail_model"
version = "0.2.0-hdk.154"
edition = "2021"

# Ensure that this is not inside of any other workspace.
# This crate should be an implementation detail of test_utils_wasm and
# therefore shouldn't be mentioned in the top-level Cargo.toml
#[workspace]

[lib]
name = "snapmail_model"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
shrinkwraprs = "=0.3.0"
serde = { version = "1.0", default-features = false }
strum = "=0.19"
strum_macros = "=0.19"
derive_more = "=0.99.16"
bincode = "=1.3.3"
base64 = {version = "0.13"}

tracing = { version = "0.1", default-features = false }

hdi = { version = "0.1.3", default-features = false }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
thiserror = "1.0.24"
holochain_serialized_bytes = "=0.0.51"
holochain = { version = "0.0.165", default-features = false }
holochain_util = { version = "0.0.12", default-features = false }
holochain_conductor_api = { version = "0.0.62", default-features = false }

